# Cuadriga

./: .gitignore
log/: latest_build
src/ARGOSJ8_IA_/: .gitmodules  README.md  dockerfile  entrypoint.sh  local_cyclonedds.xml  run_robot_docker.sh
src/ARGOSJ8_IA_/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
src/ARGOSJ8_IA_/log/: latest_build
src/ARGOSJ8_IA_/src/argj801_setup/: CMakeLists.txt  README.md  package.xml
src/ARGOSJ8_IA_/src/car_cpp/: CMakeLists.txt  package.xml
src/ARGOSJ8_IA_/src/car_python/: setup.py
src/ARGOSJ8_IA_/src/ctl_mission/: README.md
src/ARGOSJ8_IA_/src/cuadriga_actuator/: CMakeLists.txt
src/ARGOSJ8_IA_/src/cuadriga_actuator/include/cuadriga_actuator/: cuadriga_actuator_node.hpp
src/ARGOSJ8_IA_/src/cuadriga_actuator/src/: cuadriga_actuator_node.cpp  cuadriga_actuator_node_main.cpp
src/ARGOSJ8_IA_/src/path_manager/: README.md
src/Cuadriga/: docker_cyclonedds_env.sh
src/Cuadriga/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh
src/Cuadriga/log/: latest_build
src/Cuadriga_IA_/: .gitmodules  README.md  README_REMOTE_GUI_VPN.md  dockerfile  dockerfile.image_relay_server.foxy  dockerfile.image_relay_server.humble  dockerfile.jetson.cuadriga  entrypoint.sh  image_relay_server.md  install.sh  jetson_cyclonedds.xml  local_cyclonedds_vpn_lan.xml  run_image_relay_server.sh  run_jetson_listener.sh  run_remote_gui_docker.sh  run_robot_docker.sh  run_robot_docker_dual_dds.sh
src/Cuadriga_IA_/install/: local_setup.sh  setup.sh  setup.zsh
src/Cuadriga_IA_/log/: latest_build
(+2657 files in other folders)
